include/ittnotify.h

typedef struct ___itt_string_handle
{
    const char* strA; /*!< Copy of original string in ASCII. */
#if defined(UNICODE) || defined(_UNICODE)
    const wchar_t* strW; /*!< Copy of original string in UNICODE. */
#else  /* UNICODE || _UNICODE */
    void* strW;
#endif /* UNICODE || _UNICODE */
    int   extra1; /*!< Reserved. Must be zero   */
    void* extra2; /*!< Reserved. Must be zero   */
    struct ___itt_string_handle* next;
} __itt_string_handle;
/** @endcond */

/** @cond exclude_from_documentation */
typedef enum ___itt_track_group_type
{
    __itt_track_group_type_normal = 0
} __itt_track_group_type;
typedef struct ___itt_track_group
{
    __itt_string_handle* name;     /*!< Name of the track group */
    struct ___itt_track* track;    /*!< List of child tracks    */
    __itt_track_group_type tgtype; /*!< Type of the track group */
    int   extra1;                  /*!< Reserved. Must be zero  */
    void* extra2;                  /*!< Reserved. Must be zero  */
    struct ___itt_track_group* next;
} __itt_track_group;
/** @endcond */

/**
 * @brief Placeholder for custom track types. Currently, "normal" custom track
 * is the only available track type.
 */
typedef enum ___itt_track_type
{
    __itt_track_type_normal = 0
#ifdef INTEL_ITTNOTIFY_API_PRIVATE
    , __itt_track_type_queue
#endif /* INTEL_ITTNOTIFY_API_PRIVATE */
} __itt_track_type;
typedef struct ___itt_track
{
    __itt_string_handle* name; /*!< Name of the track group */
    __itt_track_group* group;  /*!< Parent group to a track */
    __itt_track_type ttype;    /*!< Type of the track       */
    int   extra1;              /*!< Reserved. Must be zero  */
    void* extra2;              /*!< Reserved. Must be zero  */
    struct ___itt_track* next;
} __itt_track;
/** @endcond */

/* ========================================================================== */
/** @cond exclude_from_gpa_documentation */
/**
 * @defgroup events Events
 * @ingroup public
 * Events group
 * @{
 */
/** @brief user event type */
typedef int __itt_event;
/** @endcond */

/** @cond exclude_from_documentation */
typedef enum
{
    __itt_module_type_unknown = 0,
    __itt_module_type_elf,
    __itt_module_type_coff
} __itt_module_type;
/** @endcond */

/** @cond exclude_from_documentation */
typedef enum
{
    itt_section_type_unknown,
    itt_section_type_bss,        /* notifies that the section contains uninitialized data. These are the relevant section types and the modules that contain them:
                                  * ELF module:  SHT_NOBITS section type
                                  * COFF module: IMAGE_SCN_CNT_UNINITIALIZED_DATA section type
                                  */
    itt_section_type_data,       /* notifies that section contains initialized data. These are the relevant section types and the modules that contain them:
                                  * ELF module:  SHT_PROGBITS section type
                                  * COFF module: IMAGE_SCN_CNT_INITIALIZED_DATA section type
                                  */
    itt_section_type_text        /* notifies that the section contains executable code. These are the relevant section types and the modules that contain them:
                                  * ELF module:  SHT_PROGBITS section type
                                  * COFF module: IMAGE_SCN_CNT_CODE section type
                                  */
} __itt_section_type;
typedef struct ___itt_section_info
{
    const char* name;                 /*!< Section name in UTF8 */
    __itt_section_type type;          /*!< Section content and semantics description */
    size_t flags;                     /*!< Section bit flags that describe attributes using bit mask
                                       * Zero if disabled, non-zero if enabled
                                       */
    void* start_addr;                 /*!< Section load(relocated) start address */
    size_t size;                      /*!< Section file offset */
    size_t file_offset;               /*!< Section size */
} __itt_section_info;
typedef void (__itt_error_handler_t)(__itt_error_code code, va_list);